@startuml

title __RESULT's Class Diagram__\n

  namespace com.example.test_2 {
    namespace ui.home {
      namespace result {
        class com.example.test_2.ui.home.result.Data {
            - brand : String
            - date : String
            - highest_price : String
            - lowest_price : String
            - platform : String
            - pro_coupons : String
            - pro_id : String
            - pro_image : int
            - pro_name : String
            - pro_type : String
            - pro_url : String
            - shop : String
            + Data()
            + Data()
            + getBrand()
            + getDate()
            + getHighest_price()
            + getLowest_price()
            + getPlatform()
            + getPro_coupons()
            + getPro_id()
            + getPro_image()
            + getPro_name()
            + getPro_type()
            + getPro_url()
            + getShop()
        }
      }
    }
  }
  

  namespace com.example.test_2 {
    namespace ui.home {
      namespace result {
        class com.example.test_2.ui.home.result.MyAdapter {
            - mContext : Context
            - mData : List<Data>
            + MyAdapter()
            + getCount()
            + getItem()
            + getItemId()
            + getView()
        }
      }
    }
  }
  

  namespace com.example.test_2 {
    namespace ui.home {
      namespace result {
        class com.example.test_2.ui.home.result.MyAdapter.ViewHolder {
            ~ pro_mini_image : ImageView
            ~ pro_price : TextView
            ~ pro_short : TextView
        }
      }
    }
  }
  

  namespace com.example.test_2 {
    namespace ui.home {
      namespace result {
        class com.example.test_2.ui.home.result.NewContentFragment {
            + onCreateView()
            ~ NewContentFragment()
        }
      }
    }
  }
  

  namespace com.example.test_2 {
    namespace ui.home {
      namespace result {
        class com.example.test_2.ui.home.result.NewContentFragment.ViewHolder {
            ~ brand : TextView
            ~ date : TextView
            ~ highest_price : TextView
            ~ lowest_price : TextView
            ~ platform : TextView
            ~ pro_coupons : TextView
            ~ pro_image : ImageView
            ~ pro_name : TextView
            ~ pro_url : TextView
            ~ shop : TextView
        }
      }
    }
  }
  

  namespace com.example.test_2 {
    namespace ui.home {
      namespace result {
        class com.example.test_2.ui.home.result.NewListFragment {
            - datas : ArrayList<Data>
            - fManager : FragmentManager
            - list_news : ListView
            + NewListFragment()
            + onCreateView()
            + onItemClick()
        }
      }
    }
  }
  

  com.example.test_2.ui.home.result.MyAdapter -up-|> android.widget.BaseAdapter
  com.example.test_2.ui.home.result.MyAdapter +-down- com.example.test_2.ui.home.result.MyAdapter.ViewHolder
  com.example.test_2.ui.home.result.NewContentFragment -up-|> androidx.fragment.app.Fragment
  com.example.test_2.ui.home.result.NewContentFragment o-- com.example.test_2.ui.home.result.NewContentFragment.ViewHolder : viewHolder
  com.example.test_2.ui.home.result.NewContentFragment +-down- com.example.test_2.ui.home.result.NewContentFragment.ViewHolder
  com.example.test_2.ui.home.result.NewListFragment .up.|> android.widget.AdapterView.OnItemClickListener
  com.example.test_2.ui.home.result.NewListFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
